# opskit-cli

./: .gitattributes  .gitignore  .gitlab-ci.yml  .windsurfrules  Makefile  README.md  bootstrap.json  build.py  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt
.cursor/: mcp.json
cache/: mirror_cache.yaml  startup_ok.json  update_check.json  version_cache.yaml
core/: cleanup.py  config.py  constants.py  feedback.py  http.py  i18n.py  installed_cache.py  loader.py  logger.py  mirror.py  module.py  paths.py  pkg_runner.py  platform.py  plugin.py  plugin_integrity.py  plugin_services.py  plugin_trust.py  privilege.py  progress.py  prompt.py  recipe_utils.py  runner.py  sdk.py  service.py  sysconfig.py  theme.py  updater.py  utils.py  venv_bootstrap.py  version.py  version_cache.py  yamlio.py
docs/: plugin-spec.md  update-refactor-plan.md
monitor/: __init__.py  commands.py  menu.py
network/: __init__.py  commands.py  menu.py
plugin/: __init__.py  commands.py  menu.py
scripts/: debug_hook_notify.py  release_bump.py
software/: __init__.py  actions.py  base.py  menu.py  registry.py  resolver.py
tailscale/: constants.py  server.py
tests/: conftest.py  test_auto_update.py  test_auto_update_acceptance.py  test_boot_sequence.py  test_config.py  test_download_cache.py  test_i18n.py  test_install_script_logic.py  test_install_windows_py.py  test_loader.py  test_logger.py  test_main_cli.py  test_menu_imports.py  test_menu_ui.py  test_mirror.py  test_mirror_switch.py  test_monitor.py  test_network.py  test_ohmyzsh_shell.py  test_paths.py  (+20 more)
(+173 files in other folders)
